Upgraded to version 2_12 '21.3.0' of twitter's finagle dependencies.